# dubbl-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dubbl/: __init__.py  _base_client.py  _client.py  _exceptions.py  _types.py
src/dubbl/resources/: __init__.py  accounts.py  accrual_schedules.py  admin.py  advisors.py  api_keys.py  approval_requests.py  approval_workflows.py  attachments.py  audit_log.py  backups.py  bank_accounts.py  bank_imports.py  bank_rules.py  bank_transactions.py  billing.py  bills.py  budgets.py  bulk.py  consolidation.py  contacts.py  cost_centers.py  credit_notes.py  crm.py  currencies.py  dashboard.py  debit_notes.py  document_emails.py  document_templates.py  documents.py  email_config.py  entries.py  exchange_rates.py  expenses.py  export.py  fiscal_years.py  fixed_assets.py  integrations.py  inventory.py  invitations.py  (+38 more)
tests/: conftest.py  test_client.py
