[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dubbl"
dynamic = ["version"]
description = "Official Python SDK for the Dubbl double-entry bookkeeping API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dubbl", email = "support@dubbl.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.20",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://dubbl.dev"
Documentation = "https://docs.dubbl.dev"
Repository = "https://github.com/dubbl-org/dubbl-py"
Changelog = "https://github.com/dubbl-org/dubbl-py/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dubbl-org/dubbl-py/issues"

[tool.hatch.version]
path = "src/dubbl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dubbl"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["dubbl.resources.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
